package com.projetos.glpi_worker.service.connection;

import java.time.Instant;

import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.stereotype.Component;

@Component
public class RefreshingTokenManager implements TokenManager {

    @Autowired
    private Authenticate authenticate;

    private volatile TokenResponse tokenResponse;
    private volatile Instant expiryTime;
    private final Object lock = new Object();
    
    public String getToken(int timeoutSeconds) {
        if (!isTokenValid()) {
            ensureAuthenticated(timeoutSeconds, true);
        }
        return tokenResponse.access_token();
    }

    public void authenticate(int timeoutSeconds) {
        if (!isTokenValid()) {
            ensureAuthenticated(timeoutSeconds, false);
        }
    }


    private void ensureAuthenticated(int timeoutSeconds, boolean useRefresh) {
        synchronized (lock) {
            // Re-checa dentro do lock (Double-Checked Locking)
            if (!isTokenValid()) {
                TokenResponse response;
                
                if (useRefresh && tokenResponse != null) {
                    response = authenticate.refreshToken(tokenResponse.access_token(), timeoutSeconds);
                } else {
                    response = authenticate.authenticate(timeoutSeconds);
                }

                // Cálculo local para garantir atomicidade na visão das outras threads
                Instant expiration = Instant.now().plusSeconds(response.expires_in());

                // Ordem importa: primeiro o que completa o estado, por último o volatile principal
                this.expiryTime = expiration;
                this.tokenResponse = response;
            }
        }
    }

    private boolean isTokenValid() {
        // Como ambos são volatile, a leitura aqui é thread-safe
        return tokenResponse != null && expiryTime != null && 
               Instant.now().isBefore(expiryTime.minusSeconds(60));
    }
}