classDiagram
  class Authenticate {
    <<interface>>
    +authenticate(int timeoutSeconds) : TokenResponse
    +refreshToken(String refreshToken, int timeoutSeconds): TokenResponse

  }

class  AuthenticateWithPassword{}
class RefreshingTokenManager{}

AuthenticateWithPassword ..|> Authenticate 


class TokenMananger {
  <<interface>>
  +getToken(int timeoutSeconds) : TokenResponse
  +authenticate(int timeoutSeconds) : TokenResponse
}

RefreshingTokenManager ..|> TokenMananger

RefreshingTokenManager --o AuthenticateWithPassword : uses